<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Фоновое изображение -->
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fon_card"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Контейнер для формы -->
    <LinearLayout
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/bgImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Номер карты -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Number_Card"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="19"
            app:startIconDrawable="@drawable/icon_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="19"
                android:digits="0123456789 "/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Имя владельца карты -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Card_Owner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/icon_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardHolderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Дата истечения и CVV -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/Data"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/icon_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expiryDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:digits="0123456789/"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/CVV"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvvEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="3"
                    android:digits="0123456789"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Кнопка "Оплатить" -->
        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_KP"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mass_card"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
